Bug 58607 - [4.9 Regression] [c++11] ICE with undeclared variable in constexpr
Summary: [4.9 Regression] [c++11] ICE with undeclared variable in constexpr
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.9.0
: P5 normal
Target Milestone: 4.9.0
Assignee: Not yet assigned to anyone
URL:
Keywords: error-recovery, ice-on-invalid-code
Depends on:
Blocks: constexpr
  Show dependency treegraph
 
Reported: 2013-10-03 20:49 UTC by Volker Reichelt
Modified: 2013-11-25 20:53 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Known to work: 4.7.0, 4.8.0
Known to fail: 4.9.0
Last reconfirmed: 2013-10-23 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Reichelt 2013-10-03 20:49:18 UTC
The following invalid code snippet (compiled with "-std=c++11") triggers an ICE on trunk (GCC 4.9.0 20130920):

=========================
struct A
{
  constexpr A() { i; }
};
=========================

bug.cc: In constructor 'constexpr A::A()':
bug.cc:3:19: error: 'i' was not declared in this scope
   constexpr A() { i; }
                   ^
bug.cc:3:22: internal compiler error: in build_data_member_initialization, at cp/semantics.c:6032
   constexpr A() { i; }
                      ^
0x6c177e build_data_member_initialization
        ../../gcc/gcc/cp/semantics.c:6032
0x6c1cc9 build_constexpr_constructor_member_initializers
        ../../gcc/gcc/cp/semantics.c:6209
0x6c1cc9 massage_constexpr_body
        ../../gcc/gcc/cp/semantics.c:6290
0x6c94f3 register_constexpr_fundef(tree_node*, tree_node*)
        ../../gcc/gcc/cp/semantics.c:6394
0x568058 maybe_save_function_definition
        ../../gcc/gcc/cp/decl.c:13771
0x568058 finish_function(int)
        ../../gcc/gcc/cp/decl.c:13892
0x65090d cp_parser_function_definition_after_declarator
        ../../gcc/gcc/cp/parser.c:22346
0x635fbc cp_parser_late_parsing_for_member
        ../../gcc/gcc/cp/parser.c:22995
0x635fbc cp_parser_class_specifier_1
        ../../gcc/gcc/cp/parser.c:19078
0x638180 cp_parser_class_specifier
        ../../gcc/gcc/cp/parser.c:19102
0x638180 cp_parser_type_specifier
        ../../gcc/gcc/cp/parser.c:14081
0x64d679 cp_parser_decl_specifier_seq
        ../../gcc/gcc/cp/parser.c:11328
0x651719 cp_parser_simple_declaration
        ../../gcc/gcc/cp/parser.c:10918
0x653740 cp_parser_block_declaration
        ../../gcc/gcc/cp/parser.c:10867
0x65c76e cp_parser_declaration
        ../../gcc/gcc/cp/parser.c:10764
0x65b4da cp_parser_declaration_seq_opt
        ../../gcc/gcc/cp/parser.c:10650
0x65cda6 cp_parser_translation_unit
        ../../gcc/gcc/cp/parser.c:3939
0x65cda6 c_parse_file()
        ../../gcc/gcc/cp/parser.c:28900
0x7707e3 c_common_parse_file()
        ../../gcc/gcc/c-family/c-opts.c:1046
Please submit a full bug report, [etc.]
Comment 1 Paolo Carlini 2013-10-23 00:19:56 UTC
Pending patch here: http://gcc.gnu.org/ml/gcc-patches/2013-10/msg01566.html
Comment 2 paolo@gcc.gnu.org 2013-11-25 20:51:59 UTC
Author: paolo
Date: Mon Nov 25 20:51:56 2013
New Revision: 205364

URL: http://gcc.gnu.org/viewcvs?rev=205364&root=gcc&view=rev
Log:
/cp
2013-11-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58607
	* semantics.c (check_constexpr_ctor_body): Check for BIND_EXPR_VARS.

/testsuite
2013-11-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58607
	* g++.dg/cpp0x/constexpr-ice9.C: New.

Added:
    trunk/gcc/testsuite/g++.dg/cpp0x/constexpr-ice9.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/semantics.c
    trunk/gcc/testsuite/ChangeLog
Comment 3 Paolo Carlini 2013-11-25 20:53:00 UTC
Fixed.