re PR c++/58607 ([c++11] ICE with undeclared variable in constexpr)

/cp
2013-11-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58607
	* semantics.c (check_constexpr_ctor_body): Check for BIND_EXPR_VARS.

/testsuite
2013-11-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58607
	* g++.dg/cpp0x/constexpr-ice9.C: New.

From-SVN: r205364